--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ chardet==4.0.0
 idna==2.10
 numpy==1.21.6
 oauthlib==3.2.0
--e git+https://github.com/max-bytes/omnikeeper-importer-python.git@bda0b7134c2439402781132573770f84e766d816#egg=omnikeeper_importer
+-e git+https://github.com/max-bytes/omnikeeper-importer-python.git@c2b198a9719505798c7b074feb8e2f3337c12f3e#egg=omnikeeper_importer
+python-json-logger==2.0.2
 requests==2.25.1
 requests-oauthlib==1.3.0
 urllib3==1.26.12
